[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/characters/botctor/botctor.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15, 15 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 256.0

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -16, 0, -64, -256, 64, -256, 16, 0 )

[node name="botctor" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
WALK_SPEED = 50.0
max_health = 3

[node name="hot_area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="escape_area" type="CollisionShape2D" parent="hot_area"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="patroll_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="item_container" type="Node2D" parent="."]

[node name="attack_trigger" type="Area2D" parent="item_container"]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="item_container/attack_trigger"]

build_mode = 0
polygon = Vector2Array( 16, 0, 64, -256, -64, -256, -16, 0 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_exit" from="hot_area" to="." method="_on_hot_area_body_exit"]

[connection signal="body_enter" from="item_container/attack_trigger" to="." method="_on_attack_trigger_body_enter"]


